| Bug #37168 | Missing variable - skip_name_resolve | ||
|---|---|---|---|
| Submitted: | 3 Jun 2008 18:47 | Modified: | 18 Jun 2010 1:52 |
| Reporter: | Jason Frisvold | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: General | Severity: | S3 (Non-critical) |
| Version: | 5.0.51a, 5.0.60 | OS: | Linux (CentOS 5.1) |
| Assigned to: | Georgi Kodinov | CPU Architecture: | Any |
[3 Jun 2008 18:47]
Jason Frisvold
[3 Jun 2008 19:28]
Valeriy Kravchuk
Current properly of skip_name_resolved is properly described at http://dev.mysql.com/doc/refman/5.0/en/privileges-options.html. So I consider this as a reasonable feature request.
[25 Jul 2008 13:56]
Baron Schwartz
It's missing in 5.1 too.
[2 Oct 2008 21:17]
Konstantin Osipov
Dear triage, missing variables for server options are not feature requests. We have resolved to fix this inconsistency.
[6 Oct 2008 20:31]
Omer Barnir
Kostja: Given the above doc link and the fact that there are other documented variables that are not available in the show command, why do you see this one as a bug and not as a feature request? If you are suggesting that all variables should be included in the show command (for consistency), it is not a bad idea, but ut us a feature request). Please clarify, Thanks
[31 Mar 2010 13:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/104713 3436 Georgi Kodinov 2010-03-31 Bug #37168: Missing variable - skip_name_resolve Added a read-only global boolean variable skip_name_resolve.
[6 Apr 2010 8:01]
Bugs System
Pushed into 5.1.46 (revid:sergey.glukhov@sun.com-20100405111026-7kz1p8qlzglqgfmu) (version source revid:joro@sun.com-20100331131237-ts0pnjw9h4vlxnge) (merge vers: 5.1.46) (pib:16)
[21 Apr 2010 23:34]
Paul DuBois
Noted in 5.1.46 changelog. There is a new system variable, skip_name_resolve, that is set from the value of the --skip-name-resolve server option. This provides a way to determine at runtime whether the server uses name resolution for client connections. Setting report to Need Merge pending push into Celosia.
[28 May 2010 5:59]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (version source revid:alik@sun.com-20100422150750-vp0n37kp9ywq5ghf) (pib:16)
[28 May 2010 6:27]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (version source revid:alik@sun.com-20100422150658-fkhgnwwkyugtxrmu) (merge vers: 6.0.14-alpha) (pib:16)
[28 May 2010 6:55]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (version source revid:alexey.kopytov@sun.com-20100403173551-52r97erqowlqwkon) (merge vers: 5.5.4-m3) (pib:16)
[29 May 2010 2:38]
Paul DuBois
Noted in 5.5.5, 6.0.14 changelogs.
[17 Jun 2010 12:01]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 12:43]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:martin.skold@mysql.com-20100609211156-tsac5qhw951miwtt) (merge vers: 5.1.46-ndb-6.2.19) (pib:16)
[17 Jun 2010 13:29]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
