Bug #37168: Missing variable - skip_name_resolve

Added a read-only global boolean variable skip_name_resolve.